# rupee-radar

./: .env.example  .gitignore  README.md  architecture.md  context.md  docker-compose.yml  edge-case.md  implementation-plan.md  problemStatement.txt  sample_statement_test.csv
backend/: alembic.ini  pyproject.toml  requirements.txt  test_upload.py
backend/alembic/: env.py
backend/alembic/versions/: aa6e8e22949a_initial_migration.py
backend/app/: config.py  database.py  main.py
backend/app/ai/: categorize_chain.py  insight_chain.py  openai_client.py  prompts.py
backend/app/api/: categories.py  insights.py  metrics.py  recurring.py  report.py  router.py  transactions.py  upload.py
backend/app/data/: category_keywords.json  recurring_merchants.json
backend/app/data/sample_statements/: sample_bank_statement.csv
backend/app/models/: __init__.py  insight.py  statement.py  transaction.py
backend/app/schemas/: __init__.py  insight.py  metrics.py  statement.py  transaction.py
backend/app/services/: categorizer.py  cleaner.py  insight_generator.py  metrics_calculator.py  parser.py  processing_pipeline.py  recurring_detector.py  report_generator.py
backend/app/tests/: test_parser.py
backend/app/utils/: currency_utils.py  date_utils.py  recurring_rules.py  text_utils.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: CategoryPieChart.tsx  EmptyState.tsx  InsightCards.tsx  Layout.tsx  (+7 more)
(+23 files in other folders)
